--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10235,16 +10235,19 @@ body {
 }
 
 .cerca {
-  margin-left: 100px;
   border-bottom: 3px solid #0282F9;
-  padding-bottom: 0px;
+  border-top: 0px;
+  width: 200px;
+}
+
+.input-group-text {
+  background-color: white;
 }
 
 header {
   padding: 15px;
   display: flex;
   justify-content: space-between;
-  align-items: center;
 }
 header ul {
   display: flex;
@@ -10255,12 +10258,12 @@ header ul li {
 }
 header ul li a {
   text-decoration: none;
-  padding-bottom: 60px;
+  padding-bottom: 40px;
   color: #4E565F;
   font-weight: 600;
   text-transform: uppercase;
 }
-header ul li a.active {
+header ul li a.active, header ul li a:hover {
   color: #0282F9;
   border-bottom: 4px solid #0282F9;
 }
@@ -10382,4 +10385,29 @@ span {
   color: white;
   font-weight: 600;
   text-transform: uppercase;
+}
+
+.div_blue {
+  background-color: #0282F9;
+  height: 70px;
+}
+
+.fumetto {
+  position: absolute;
+  top: -330px;
+  left: 0;
+}
+
+.avaiable {
+  background-color: lightgreen;
+}
+
+.artisti, .scrittori {
+  font-size: 12px;
+  color: #0282F9;
+  font-weight: 600;
+}
+
+.main_bottom {
+  border-top: 1px solid black;
 }
